sass/modules/_header.sass
.header
	box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.15)
	padding: 22px 0
	&__container
		display: flex
		justify-content: space-between
	&__logo
		padding-right: 140px
	&__navigation
	&__control
		&-list
			gap: 30px
			display: flex
			align-items: center
		&-item
			display: block
			height: 24px
	&__btn
		height: 100%
		background-color: $white
		background-repeat: no-repeat
		background-position: center
		border: none
		width: 26px
		background-size: contain
		transition-duration: .4s
		&:hover
			opacity: 0.4
		&-cart
			width: 24px
			background-image: url(../img/bag.svg)
		&-fav
			display: block

			background-image: url(../img/Vector.svg)
		&-acc
			display: block
			width: 22px
			background-image: url(../img/person.svg)

.navigation
	display: flex
	font-weight: 300
	line-height: 22px
	&__list
		display: flex
		min-width: 385px
		justify-content: space-between
		align-items: center

	&__btn
		display: none
	&__control
		display: none
	&__mobile-wrapper
		display: flex
		padding-right: 150px
	&__item
		position: relative
		&::after
			position: absolute
			content: ''
			background-color: $main-color
			width: 100%
			height: 1px
			bottom: -15px
			left: 0
			transform-origin: center
			transform: scaleX(0)
			transition-duration: .3s
		&:hover
			&::after
				transform: scaleX(1)

.search
	position: relative
	height: 46px
	display: flex
	align-items: center
	padding-right: 12px
	&__button
		position: relative
		display: block
		width: 70px
		height: 100%
		background-color: $light-grey
		background-image: url('../img/search.svg')
		background-repeat: no-repeat
		background-position: center
		background-size: 24px
		outline: none
		border: none
		border-radius: 20px
		z-index: 2
	&__input
		position: absolute
		border: none
		right: 35px
		top: 0
		height: 100%
		width: 523px
		transform: scaleX(0)
		transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out
		transform-origin: right
		background-color: $light-grey
		border-radius: 20px
	&__close
		position: absolute
		top: 6px
		right: 11px
		height: 12px
		width: 12px
		border: none
		background-image: url(../img/close_input.svg)
		background-repeat: no-repeat
		background-position: center
		background-color: transparent
		opacity: 0
		visibility: hidden
		transition: opacity 0.3s ease-in-out 0.1s
		z-index: 3
	&_active
		.search__input
			position: absolute
			transform: scaleX(1) translateX(35px)
			padding: 15px 30px
			box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.15)

		.search__close
			visibility: visible
			opacity: 0.4
			&:hover
				opacity: 1
@media (max-width: 1110px)
	.header
		&__logo
			padding-right: 100px
@media (max-width: 1260px)
	.navigation
		&__mobile-wrapper
			padding-right: 0
		&__list
			min-width: 345px

@media (max-width: 1000px)
	.header
		&__logo
			padding: 0
	// прячем разделы в каталог
	.navigation
		position: relative
		padding: 0
		&__btn
			display: flex
			align-items: center
			border: none
			background-color: $white
			font-weight: inherit
			gap: 8px
			&::after
				content: ''
				display: block
				width: 14px
				height: 10px
				background-image: url('../img/arrow.svg')
				background-repeat: no-repeat
				background-position: center
		&__list
			position: absolute
			height: 0
			overflow: hidden
		&_active
			// выпадающее меню
			.navigation__list
				height: auto
				min-width: auto
				flex-direction: column
				align-items: flex-start
				background-color: $white
				padding: 0px 13px 13px 10px
				gap: 15px
				top: 46px
				left: -10px
			.navigation__btn
				&::after
					transform: rotateX(180deg)
			.navigation__item
				&:hover
					&::after
						transform: scaleX(0)
		&__link
			font-size: 14px
			line-height: 17px

	.search
		&__input
			width: 403px

@media (max-width: 760px)
	//каталог превращаем в бургер(крестик)
	.navigation
		&__btn
			position: relative
			font-size: 0
			width: 18px
			height: 12px
			&::after, &::before
				content: ''
				position: absolute
				width: 100%
				left: 0
				height: 2px
				background-color: $main-color
			&::after
				top: calc( 100% - 2px )
			&::before
				top: 0
			&_line
				position: absolute
				left: 0
				right: 0
				top: 50%
				height: 2px
				transform: translateY(-50%) scale(1)
				background-color: $main-color
				transition: transform .24s ease
			// превращение в крестик и сокрытие средней линии
	.navigation_active
		position: static
		.navigation__btn

			&::before
				top: 50%
				transform: rotate(45deg)
				transition: transform .24s ease, top .24s ease
			&::after
				top: 50%
				transform: rotate(-45deg)
				transition: transform .24s ease, top .24s ease
			.navigation__btn_line
				transform: translateY(-50%) scale(0)
	// меняем местами бургер и поиск(поиск спускается на вторую строку)
	.header
		&__container
			display: grid
			grid-template-columns: repeat(2, 1fr )
			gap: 30px
		&__logo

		&__navigation
			justify-self: end
			align-items: center
		&__search
			width: 100%
			grid-column: 1/3
			justify-self: end
		&__control
			&-list
				display: none

	.navigation
		&__control
			display: flex
			align-self: flex-end
		&__mobile
			&-wrapper
				background-color: $white
				position: absolute
				display: none
				top: 80px
				right: 0px
				gap: 30px
				z-index: 999

		&_active
			.navigation__mobile-wrapper
				width: 100%
				padding: 20px 94px
				display: flex
				flex-direction: column
			.navigation__list
				justify-content: space-between
				position: static
				flex-direction: row
				padding: 0

	.search
		padding: 0
		.search__button
			border-radius: 0 12px 12px 0
		.search__input
			position: static
			transform: scaleX(1)
			width: 100%
			border-radius: 12px 0 0 12px
			font-size: 12px
			box-shadow: none
			padding: 0 15px
		.search__close
			display: none

@media (max-width: 500px)
	.navigation
		&_active
			.navigation__mobile-wrapper
				padding: 20px 20px

